# Social_Robot_Moveit

./: README.md
config/: joint_limits.yaml  ompl_planning.yaml  social_robot.srdf
social_robot_arm_controller/: CMakeLists.txt  package.xml
social_robot_arm_controller/include/social_robot_arm_controller/: social_robot_arm_controller.h
social_robot_arm_controller/launch/: social_robot_arm_controller.launch  social_robot_arm_moveit.launch
social_robot_arm_controller/scripts/: create_udev_rules
social_robot_arm_controller/src/: social_robot_arm_controller.cpp
social_robot_arm_moveit/: CMakeLists.txt  package.xml
social_robot_arm_moveit/config/: fake_controllers.yaml  kinematics.yaml  ros_controllers.yaml
social_robot_arm_moveit/example/: execute_trajectory.py
social_robot_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  default.launch  default_warehouse_db.launch  demo.launch  demo_copy.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  social_robot_moveit_controller_manager.launch.xml  social_robot_rviz.launch  trajectory_execution.launch.xml  warehouse.launch
